@@ -1,50 +1,0 @@
-#!/usr/bin/env bash
-
-# Author:   Zhang Huangbin (zhb _at_ iredmail.org)
-
-#---------------------------------------------------------------------
-# This file is part of iRedMail, which is an open source mail server
-# solution for Red Hat(R) Enterprise Linux, CentOS, Debian and Ubuntu.
-#
-# iRedMail is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# iRedMail is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with iRedMail.  If not, see <http://www.gnu.org/licenses/>.
-#---------------------------------------------------------------------
-
-export PHPPGADMIN_VERSION='5.1'
-export PHPPGADMIN_TARBALL="phpPgAdmin-${PHPPGADMIN_VERSION}.tar.bz2"
-
-# Install phpPgAdmin with source tarball.
-export PHPPGADMIN_USE_SOURCE='YES'
-export PHPPGADMIN_HTTPD_ROOT="${HTTPD_SERVERROOT}/phpPgAdmin-${PHPPGADMIN_VERSION}"
-export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${HTTPD_SERVERROOT}/phppgadmin"
-export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin.conf"
-
-# Install phpPgAdmin with binary packages.
-if [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
-    export PHPPGADMIN_USE_SOURCE='NO'
-    export PHPPGADMIN_HTTPD_ROOT="/usr/share/phppgadmin"
-    export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${PHPPGADMIN_HTTPD_ROOT}"
-    if [ X"${DISTRO_CODENAME}" == X'wheezy' \
-        -o X"${DISTRO_CODENAME}" == X'precise' ]; then
-        export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin"
-    else
-        export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin.conf"
-    fi
-elif [ X"${DISTRO}" == X"FREEBSD" -o X"${DISTRO}" == X'OPENBSD' ]; then
-    export PHPPGADMIN_USE_SOURCE='NO'
-    export PHPPGADMIN_HTTPD_ROOT="${HTTPD_SERVERROOT}/phpPgAdmin"
-    export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${PHPPGADMIN_HTTPD_ROOT}"
-    export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin.conf"
-fi
-
-export PHPPGADMIN_CONFIG_FILE="${PHPPGADMIN_HTTPD_ROOT}/conf/config.inc.php"
