@@ -2,6 +2,7 @@
 plugins = python
 vhost = true
 socket = PH_UWSGI_SOCKET_IREDADMIN
+pidfile = PH_UWSGI_PID_IREDADMIN
 chown-socket = PH_HTTPD_USER:PH_HTTPD_GROUP
 chmod-socket = 660
 uid = iredadmin
